Successfully Fetch the API

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <!-- ----- Search Bar ----- -->
             <div class="my-5 input-group mb-3">
               <input
+                id="search-input"
                 placeholder="Input The City"
                 type="text"
                 class="form-control"
