main info card danamically added

--- a/index.html
+++ b/index.html
@@ -38,14 +38,23 @@
               </button>
             </div>
             <!-- ----- Main Card ----- -->
-            <div class="mx-auto card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
+            <div id="main-card">
+              <!-- <div class="mx-auto card" style="width: 18rem">
+                <div class="bg-light">
+                  <img
+                    src="http://openweathermap.org/img/w/01n.png"
+                    class="card-img-top w-25 mx-auto"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <h4>Rangpur</h4>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div> -->
             </div>
           </div>
           <div class="my-md-5 my-0 col-md-6">
