successfully API data display in UI

--- a/index.html
+++ b/index.html
@@ -39,26 +39,21 @@
             </div>
             <!-- ----- Main Card ----- -->
             <div id="main-card">
-              <!-- <div class="mx-auto card" style="width: 18rem">
-                <div class="bg-light">
-                  <img
-                    src="http://openweathermap.org/img/w/01n.png"
-                    class="card-img-top w-25 mx-auto"
-                    alt="..."
-                  />
-                </div>
-                <div class="card-body">
-                  <h4>Rangpur</h4>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div> -->
+              <!-- -------- 
+                Dynamic Main Card 
+                -------- -->
             </div>
           </div>
+          <!-- ---- More Details Card --- -->
           <div class="my-md-5 my-0 col-md-6">
-            <h1 class="my-md-0 mt-5 fw-bold">More Details</h1>
+            <h2 class="my-md-0 mt-5 fw-bold">More Details</h2>
+            <table id="moreDetails" class="table table-bordered border-primary">
+              <tbody>
+                <!-- ----- 
+                    Dynamic More Details Section 
+                 ----- -->
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
