footer, favicon and minor update in UI

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon" />
     <!-- Bootstrap CSS v5.0.2 -->
     <link
       rel="stylesheet"
@@ -53,7 +53,9 @@
         </div>
         <!-- ---- More Details Card --- -->
         <div class="mt-md-5 mt-0 col-md-6">
-          <h2 class="my-md-0 mt-5 fw-bold">More Details</h2>
+          <h3 class="bg-primary text-white py-1 my-md-0 mt-5 fw-bold">
+            More Details
+          </h3>
           <div
             id="loader2"
             style="height: 125px; display: none"
@@ -75,6 +77,11 @@
     <div id="default" class="mt-0 w-50 mx-auto">
       <img class="w-100" src="./weather.gif" alt="rahimuj570" />
     </div>
+    <footer class="bg-secondary">
+      <p class="text-center text-white py-2 px-1">
+        A Practice Project of Rest API &copy;rahimuj570
+      </p>
+    </footer>
     <!-- JavaScript Linked -->
     <script src="./weather.js"></script>
   </body>
