img folder created

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="shortcut icon" href="./fav.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon" />
     <!-- Bootstrap CSS v5.0.2 -->
     <link
       rel="stylesheet"
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div id="default" class="mt-0 w-50 mx-auto">
-      <img class="w-100" src="./weather.gif" alt="rahimuj570" />
+      <img class="w-100" src="./img/weather.gif" alt="rahimuj570" />
     </div>
     <footer class="bg-secondary">
       <p class="text-center text-white py-2 px-1">
